# service

./: README.md  pyproject.toml  test.py
.cursor/rules/: python.mdc
examples/: client.py  dynamic_spacing_example.py  example_service.py  normal_client.py  server.py
examples/websocket/: client.py  normal_client.py  server.py
src/service/: __init__.py  constants.py  daemon.py  loopingcall.py  periodic_task.py  systemd.py  taskgroup.py
src/service/config/: common.py
src/service/launchers/: __init__.py  base.py  launch.py  process_launcher.py  service_launcher.py
src/service/utils/: lock.py  log.py  reflection.py  singleton.py  time.py
tests/: README.md  conftest.py  memory_diagnostic.py  pytest.ini  run_tests.py  test_performance_fixes.py  test_process_launcher.py  test_process_launcher_performance.py  test_process_launcher_performance_optimized.py  test_service_launcher.py  test_service_launcher_performance.py
