[project]
name = "service"
version = "1.0.0"
description = "python daemon service"
authors = [
    {name = "wangkuntian",email = "wangkuntian1994@163.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fasteners (>=0.19,<0.20)",
    "psutil (>=7.0.0,<8.0.0)",
    "setproctitle (>=1.3.6,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "service", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"

[tool.ruff]
line-length = 79
select = [
    "F", "E", "W", "UP", "C", "I", "W"
]
ignore = []

[tool.ruff.format]
quote-style = "single"